# loopy

./: .gitignore  ChannelInfo.py  FluidSynthSoundEngine.py  FreeMetronomeChannel.py  FreeMidiChannel.py  InstrumentChannel.py  InstrumentRegistry.py  Project.py  README.md  SoundEngine.py  StepChannel.py  StepSequencer.py  StepSequencerChannel.py  fluid_test.py  install.py  install.sh  loopy.py  metronome.py  midi_test.py  pyproject.toml  requirements.txt  seq_test.py  synth_test.py  themes.py
sf2/: GeneralUser-GS2-Presets.txt
src/loopy/: ChannelInfo.py  FluidSynthSoundEngine.py  FreeMetronomeChannel.py  FreeMidiChannel.py  InstrumentRegistry.py  Project.py  SoundEngine.py  StepChannel.py  StepSequencer.py  StepSequencerChannel.py  __init__.py  loopy.py
tests/: conftest.py
tests/acceptance/: test_step_sequencer_flow.py
tests/regression/: test_step_channel_length.py  test_step_sequencer_tempo.py
tests/smoke/: test_package_import.py
